--- a/Example/Base.lproj/Main.storyboard
+++ b/Example/Base.lproj/Main.storyboard
@@ -114,39 +114,65 @@
                                 </subviews>
                             </stackView>
                             <collectionView multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="9we-tN-g3s">
-                                <rect key="frame" x="0.0" y="283.5" width="1000" height="100"/>
+                                <rect key="frame" x="0.0" y="273.5" width="1000" height="120"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="EY2-hH-aZK"/>
+                                    <constraint firstAttribute="height" constant="120" id="EY2-hH-aZK"/>
                                 </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="8" minimumInteritemSpacing="5" id="sEg-O7-1H0">
-                                    <size key="itemSize" width="115" height="60"/>
+                                    <size key="itemSize" width="115" height="120"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="16" minY="16" maxX="16" maxY="16"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="qcJ-et-por" customClass="TextCollectionViewCell" customModule="Example" customModuleProvider="target">
-                                        <rect key="frame" x="16" y="16" width="115" height="60"/>
+                                        <rect key="frame" x="16" y="16" width="115" height="120"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="115" height="60"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="115" height="120"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uae-pq-NM2" customClass="PieceView" customModule="Example" customModuleProvider="target">
-                                                    <rect key="frame" x="0.0" y="5" width="115" height="50"/>
-                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YjO-Sr-5LT">
+                                                    <rect key="frame" x="0.0" y="0.0" width="115" height="76"/>
+                                                    <subviews>
+                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uae-pq-NM2" customClass="PieceView" customModule="Example" customModuleProvider="target">
+                                                            <rect key="frame" x="8" y="8" width="99" height="60"/>
+                                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="60" id="gjK-kL-B4R"/>
+                                                            </constraints>
+                                                        </view>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstItem="uae-pq-NM2" firstAttribute="centerY" secondItem="YjO-Sr-5LT" secondAttribute="centerY" id="A5f-Y0-phu"/>
+                                                        <constraint firstItem="uae-pq-NM2" firstAttribute="leading" secondItem="YjO-Sr-5LT" secondAttribute="leading" constant="8" id="E6q-hd-DOl"/>
+                                                        <constraint firstAttribute="trailing" secondItem="uae-pq-NM2" secondAttribute="trailing" constant="8" id="jAZ-Sl-19o"/>
+                                                        <constraint firstItem="uae-pq-NM2" firstAttribute="top" secondItem="YjO-Sr-5LT" secondAttribute="top" constant="8" id="tzC-G6-jYR"/>
+                                                        <constraint firstAttribute="height" constant="76" id="ybv-1e-OaF"/>
+                                                    </constraints>
                                                 </view>
+                                                <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mAg-cR-CX9">
+                                                    <rect key="frame" x="47" y="84" width="20" height="20"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="20" id="89k-jh-0Wc"/>
+                                                        <constraint firstAttribute="height" constant="20" id="YwF-p9-NRi"/>
+                                                    </constraints>
+                                                </imageView>
                                             </subviews>
                                         </view>
                                         <constraints>
-                                            <constraint firstAttribute="bottom" secondItem="uae-pq-NM2" secondAttribute="bottom" constant="5" id="Nup-Ti-3Hv"/>
-                                            <constraint firstAttribute="trailing" secondItem="uae-pq-NM2" secondAttribute="trailing" id="T8S-ZP-gxO"/>
-                                            <constraint firstItem="uae-pq-NM2" firstAttribute="top" secondItem="qcJ-et-por" secondAttribute="top" constant="5" id="Tmm-Ri-80J"/>
-                                            <constraint firstItem="uae-pq-NM2" firstAttribute="leading" secondItem="qcJ-et-por" secondAttribute="leading" id="YAT-FZ-CKE"/>
+                                            <constraint firstItem="YjO-Sr-5LT" firstAttribute="top" secondItem="qcJ-et-por" secondAttribute="top" id="2y2-YS-eks"/>
+                                            <constraint firstAttribute="trailing" secondItem="YjO-Sr-5LT" secondAttribute="trailing" id="5Kw-ea-7kS"/>
+                                            <constraint firstItem="YjO-Sr-5LT" firstAttribute="leading" secondItem="qcJ-et-por" secondAttribute="leading" id="FqM-rt-85m"/>
+                                            <constraint firstItem="mAg-cR-CX9" firstAttribute="top" secondItem="YjO-Sr-5LT" secondAttribute="bottom" constant="8" id="RDr-Db-Y93"/>
+                                            <constraint firstItem="mAg-cR-CX9" firstAttribute="centerX" secondItem="qcJ-et-por" secondAttribute="centerX" id="yCo-W0-T1T"/>
                                         </constraints>
                                         <connections>
+                                            <outlet property="badge" destination="mAg-cR-CX9" id="Hof-pL-IXu"/>
                                             <outlet property="noteView" destination="uae-pq-NM2" id="7OT-gK-X8M"/>
+                                            <outlet property="piecesPackground" destination="YjO-Sr-5LT" id="ub1-pB-ZzS"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -204,7 +230,7 @@
                                 </constraints>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Place the puzzle pieces in the correct order:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="elq-lf-jRc">
-                                <rect key="frame" x="100" y="213.5" width="800" height="50"/>
+                                <rect key="frame" x="100" y="203.5" width="800" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="sNd-0z-ykq"/>
                                 </constraints>
@@ -235,7 +261,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Tnr-xn-6VT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1216" y="185.75712143928038"/>
+            <point key="canvasLocation" x="1216" y="184.85757121439281"/>
         </scene>
     </scenes>
     <resources>
